# SDLxQt

./: CMakeLists.txt  README.md  main.cpp
